--- a/JORS paper/Tutorial.ipynb
+++ b/JORS paper/Tutorial.ipynb
@@ -5,6 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TUTORIAL FROM JORS PAPER | MARIO: A Versatile and User-Friendly Software for Building Input-Output Models (https://doi.org/10.5334/jors.473)\n",
+    "\n",
     "In this example, we show a simple yet comprehensive tutorial on the main features of the MARIO modelling framework.\n",
     "This example requires the user to first download the Exiobase hybrid supply-use table referred to year 2011 from this link: https://zenodo.org/record/7244919#.ZGOGbk_P23A\n",
     "\n",
@@ -15,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,28 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "name = None\n",
-       "table = SUT\n",
-       "scenarios = ['baseline']\n",
-       "Activity = 164\n",
-       "Commodity = 200\n",
-       "Factor of production = 1\n",
-       "Satellite account = 66\n",
-       "Consumption category = 6\n",
-       "Region = 48"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "world"
    ]
@@ -71,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,30 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                     unit\n",
-      "Paddy rice                                         tonnes\n",
-      "Wheat                                              tonnes\n",
-      "Cereal grains nec                                  tonnes\n",
-      "Vegetables; fruit; nuts                            tonnes\n",
-      "Oil seeds                                          tonnes\n",
-      "...                                                   ...\n",
-      "Membership organisation services n.e.c. (91)        Meuro\n",
-      "Recreational; cultural and sporting services (92)   Meuro\n",
-      "Other services (93)                                 Meuro\n",
-      "Private households with employed persons (95)       Meuro\n",
-      "Extra-territorial organizations and bodies          Meuro\n",
-      "\n",
-      "[200 rows x 1 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "commodity_units = world.units['Commodity'] # extracting the commodity units\n",
     "print(commodity_units)"
@@ -128,26 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name = None\n",
-      "table = SUT\n",
-      "scenarios = ['baseline']\n",
-      "Activity = 50\n",
-      "Commodity = 44\n",
-      "Factor of production = 1\n",
-      "Satellite account = 1\n",
-      "Consumption category = 1\n",
-      "Region = 5\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "aggr_path = r\"Aggregation\\aggregation.xlsx\" # providing path to filled Excel aggregation file\n",
     "world.aggregate(aggr_path) # aggregating Database object\n",
@@ -164,69 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Uranium mining',\n",
-       " 'Electricity grid',\n",
-       " 'Electronics and electrical manufacturing',\n",
-       " 'Cement manufacturing',\n",
-       " 'Forestry and logging',\n",
-       " 'Biomass and waste power plants',\n",
-       " 'Cultivation',\n",
-       " 'Gas distribution network',\n",
-       " 'Other renewables power plants',\n",
-       " 'Plastics production',\n",
-       " 'Coal refinery',\n",
-       " 'Paper and pulp production',\n",
-       " 'Construction',\n",
-       " 'Crude oil extraction',\n",
-       " 'Coal power plants',\n",
-       " 'Chemicals',\n",
-       " 'Nuclear fuel process',\n",
-       " 'Oil power plants',\n",
-       " 'Air transport',\n",
-       " 'Food production',\n",
-       " 'Metals manufacturing',\n",
-       " 'Non-metallic minerals manufacturing',\n",
-       " 'Machinery production',\n",
-       " 'Other services',\n",
-       " 'Steam and hot water supply',\n",
-       " 'Other manufacturing',\n",
-       " 'Pipeline transport',\n",
-       " 'Wood production',\n",
-       " 'Coal mining',\n",
-       " 'Textiles manufacturing',\n",
-       " 'Non-ferrous metal ores mining',\n",
-       " 'Road transport',\n",
-       " 'Wind farms',\n",
-       " 'Hydroelectric power plants',\n",
-       " 'Vehicles manufacturing',\n",
-       " 'Gas refinery',\n",
-       " 'Iron and steel manufacturing',\n",
-       " 'Recycling and re-processing',\n",
-       " 'Waste treatment',\n",
-       " 'Nuclear power plants',\n",
-       " 'Stone and minerals mining',\n",
-       " 'Gas power plants',\n",
-       " 'Railway transport',\n",
-       " 'Animal farming',\n",
-       " 'Natural gas extraction',\n",
-       " 'Natural gas liquefaction',\n",
-       " 'Non-ferrous metals manufacturing',\n",
-       " 'Petroleum refinery',\n",
-       " 'Water transport',\n",
-       " 'Solar power plants']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "world.get_index(\"Activity\") # exporting a list of all activities included in the Database "
    ]
@@ -241,24 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Gas distribution network',\n",
-       " 'Gas refinery',\n",
-       " 'Gas power plants',\n",
-       " 'Natural gas extraction',\n",
-       " 'Natural gas liquefaction']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "world.search(\"Activity\",\"gas\") # extracting all the activities including the \"gas\" string"
    ]
@@ -273,176 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Database: to calculate f following matrices are need.\n",
-      "['w'].Trying to calculate dependencies.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>Region</th>\n",
-       "      <th colspan=\"10\" halign=\"left\">RoW</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"10\" halign=\"left\">USA</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Level</th>\n",
-       "      <th colspan=\"10\" halign=\"left\">Commodity</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"10\" halign=\"left\">Activity</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Item</th>\n",
-       "      <th>Crops</th>\n",
-       "      <th>Livestock and animal products</th>\n",
-       "      <th>Recycling and re-processing services</th>\n",
-       "      <th>Solid biomass</th>\n",
-       "      <th>Coal</th>\n",
-       "      <th>Crude oil</th>\n",
-       "      <th>Natural gas</th>\n",
-       "      <th>Natural gas liquids</th>\n",
-       "      <th>Other hydrocarbons</th>\n",
-       "      <th>Uranium</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Gas distribution network</th>\n",
-       "      <th>Steam and hot water supply</th>\n",
-       "      <th>Other services</th>\n",
-       "      <th>Construction</th>\n",
-       "      <th>Railway transport</th>\n",
-       "      <th>Road transport</th>\n",
-       "      <th>Pipeline transport</th>\n",
-       "      <th>Water transport</th>\n",
-       "      <th>Air transport</th>\n",
-       "      <th>Waste treatment</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Item</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CO2</th>\n",
-       "      <td>0.40226</td>\n",
-       "      <td>6.589805</td>\n",
-       "      <td>0.229887</td>\n",
-       "      <td>0.080603</td>\n",
-       "      <td>0.014023</td>\n",
-       "      <td>0.043227</td>\n",
-       "      <td>0.160696</td>\n",
-       "      <td>0.160696</td>\n",
-       "      <td>0.003855</td>\n",
-       "      <td>3.377952</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1048.286865</td>\n",
-       "      <td>116.808747</td>\n",
-       "      <td>227.959922</td>\n",
-       "      <td>378.868077</td>\n",
-       "      <td>1668.666039</td>\n",
-       "      <td>609.775271</td>\n",
-       "      <td>3643.825705</td>\n",
-       "      <td>1905.85144</td>\n",
-       "      <td>1907.26418</td>\n",
-       "      <td>0.037553</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 470 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Region       RoW                                \\\n",
-       "Level  Commodity                                 \n",
-       "Item       Crops Livestock and animal products   \n",
-       "Item                                             \n",
-       "CO2      0.40226                      6.589805   \n",
-       "\n",
-       "Region                                                                         \\\n",
-       "Level                                                                           \n",
-       "Item   Recycling and re-processing services Solid biomass      Coal Crude oil   \n",
-       "Item                                                                            \n",
-       "CO2                                0.229887      0.080603  0.014023  0.043227   \n",
-       "\n",
-       "Region                                                               ...  \\\n",
-       "Level                                                                ...   \n",
-       "Item   Natural gas Natural gas liquids Other hydrocarbons   Uranium  ...   \n",
-       "Item                                                                 ...   \n",
-       "CO2       0.160696            0.160696           0.003855  3.377952  ...   \n",
-       "\n",
-       "Region                      USA                                            \\\n",
-       "Level                  Activity                                             \n",
-       "Item   Gas distribution network Steam and hot water supply Other services   \n",
-       "Item                                                                        \n",
-       "CO2                 1048.286865                 116.808747     227.959922   \n",
-       "\n",
-       "Region                                                                   \\\n",
-       "Level                                                                     \n",
-       "Item   Construction Railway transport Road transport Pipeline transport   \n",
-       "Item                                                                      \n",
-       "CO2      378.868077       1668.666039     609.775271        3643.825705   \n",
-       "\n",
-       "Region                                                \n",
-       "Level                                                 \n",
-       "Item   Water transport Air transport Waste treatment  \n",
-       "Item                                                  \n",
-       "CO2         1905.85144    1907.26418        0.037553  \n",
-       "\n",
-       "[1 rows x 470 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "world.f # calculate the footprint coefficients matrix"
    ]
@@ -635,7 +338,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "world.plot_matrix(\n",
+    "    matrix = 'E', # plotting the use transaction matrix,\n",
+    "    item = 'Activity',  # it is necessary to specify the row items for the selected matrix\n",
+    "    facet_col='Region_to', # arrange the subplots: importing regions on the rows of the grid\n",
+    "    # facet_row='Region_from', # arrange the subplots: exporting regions on the columns of the grid\n",
+    "    x = 'Activity_to', # putting the activities on the x-axis \n",
+    "    color='Region_from', # putting the commodities on the legend\n",
+    "    path='Plots\\plot_E.html', # providing a path where to save the file\n",
+    "    base_scenario = \"baseline\", # indicate the results must be shown as a difference with respect to the baseline scenario\n",
+    "    # filter_Activity_to= ['Manufacture of batteries'], # filter activities\n",
+    "    # filter_Region_from=['China','EU27+UK','RoW'], # filter exporting regions\n",
+    "    # filter_Region_to=['EU27+UK'], # filter importing regions\n",
+    "    # filter_Commodity_from=['Chemicals','Non-ferrous metal ores','Electricity','Natural gas'], # filter consumed commodities \n",
+    ")"
+   ]
   }
  ],
  "metadata": {
