--- a/GTAP MRIO/AddSectors_tutorial.ipynb
+++ b/GTAP MRIO/AddSectors_tutorial.ipynb
@@ -7,17 +7,19 @@
     "# Add Sectors Tutorial\n",
     "This notebook demonstrates how to add new sectors to the GTAP MRIO database using the MARIO library.\n",
     "\n",
+    "*N.B. You need to use the MARIO dev branch since the add sectors functionality is not available in the main branch currently.*\n",
+    "\n",
     "### Import necessary libraries\n",
     "This block imports the required libraries and suppresses warnings for cleaner output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mario # Need to use MARIO dev branch since add sectors is not in main currently\n",
+    "import mario \n",
     "import warnings  \n",
     "warnings.filterwarnings(\"ignore\")  # pandas is becoming a bit too noisy with warnings...\n",
     "\n",
