minor comments fixed

--- a/GTAP MRIO/Parser_tutorial.ipynb
+++ b/GTAP MRIO/Parser_tutorial.ipynb
@@ -24,7 +24,7 @@
     "import warnings  \n",
     "warnings.filterwarnings(\"ignore\")  # pandas is becoming a bit too noisy with warnings...\n",
     "\n",
-    "gtap_path = '/Users/lorenzorinaldi/Library/CloudStorage/OneDrive-SharedLibraries-eNextGen/ENTICE - Documents/Database/MARIO/flows'\n",
+    "gtap_path = 'your_path/GTAP_MARIO/flows'  # make sure you include \"flows\" in the path\n",
     "\n",
     "db = mario.parse_from_txt(\n",
     "    path=gtap_path,\n",
